--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ header {
   justify-content: center
 }
 
+button:hover {
+  background-color: lightgrey
+}
+
 button {
   cursor: pointer;
   padding: 5px;
