--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 100px;
+  padding-top: 20px;
 }
 
 .square-1 {
@@ -81,4 +81,60 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+#play-button {
+    width: 75px;
+    height: 75px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+}
+
+#tempo {
+    font-size: 40px;
+}
+
+.bpm {
+    font-size: 12px;
+    text-align: center;
+}
+
+.tempo-controls {
+    margin-top: 30px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: row;
+}
+
+.tempo-container {
+    margin: 0 15px;
+}
+
+.play {
+    width: 0;
+    height: 0;
+    border-top: 30px solid transparent;
+    border-bottom: 30px solid transparent;
+    border-left: 50px solid #e9e9e9;
+    margin-left: 15px;
+}
+
+.pause {
+    width: 15px;
+    height: 60px;
+    border: none;
+    border-left: 15px solid #e9e9e9;
+    border-right: 15px solid #e9e9e9;
+}
+
+.the-metronome {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
