--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ button {
   justify-content: center;
   align-items: center;
   font-family: 'Roboto', sans-serif;
-  background-color: rgba(225, 225, 225, .9);
+  background-color:  rgba(225, 225, 225, .9);
     border: 2px solid black;
 }
 
@@ -89,6 +89,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 10px;
 }
 
 #play-button {
